force-app/main/default/objects/TwitchInvokerStrategy__mdt/TwitchInvokerStrategy__mdt.object-meta.xml
<CustomObject>
    <description>Strategy definitions for the twitch strategy invocation</description>
    <label>Twitch Invoker Strategy</label>
    <pluralLabel>Twitch Invoker Strategies</pluralLabel>
</CustomObject>