force-app/main/default/objects/TwitchInvokerStrategy__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the configuration is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>