force-app/main/default/objects/TwitchInvokerStrategy__mdt/fields/EncryptResponse__c.field-meta.xml
<CustomField>
    <fullName>EncryptResponse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Encrypt Response</label>
    <type>Checkbox</type>
</CustomField>