force-app/main/default/objects/TwitchInvokerStrategy__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint to invoke</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>